--- a/views/addsubtitles.ejs
+++ b/views/addsubtitles.ejs
@@ -2,195 +2,140 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/login.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <title><%= cloudname %> | <%= lang["Add-Subtitles"] %></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
     <style>
-        body {
-    background-color: #d2d3db;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
-h1 {
-    color: #5D3FD3;
-    margin-top: 10%;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: xxx-large;
+    body {
+        background-image: linear-gradient(to right bottom, #1f74cc, #3c7ed1, #5087d6, #6291db, #729be0, #87a6e4, #9ab1e9, #acbced, #c5cbf1, #dadcf5, #eeedfa, #ffffff);
+        width: 100vw;
+        height: 100vh;
+        margin: 0;
+    }
 
-}
+    .flex-container {
+        display: flex;
+        width: 100%;
+        height: 96%;
+        flex-flow: column nowrap;
+        justify-content: center;
+        align-items: center;
+    }
 
-.subtitle {
-    color: #5D3FD3;
-    margin-top: -5px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: x-large;
-}
+        .addsubtitles {
+            width: auto ;
+            padding-left: 1%;
+            padding-right: 1%;
+            height: 35%;
+            background-color: #111111;
+            border-radius: 50px;
+            align-items: center;
+            justify-content: center;
+            align-items: center;
+        }
 
-p {
-    color: #5D3FD3;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: 20px;
-}
+        .addsubtitles > h1, .addsubtitles > h2, .addsubtitles > h3, h3 {
+            font-family: 'Montserrat', sans-serif;
+            text-align: center;
+            color: #1f74cc;
+            line-height: 40%;
+        }
 
-a {
-    color: #5D3FD3;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: "Montserrat", sans-serif;
-    font-size: 20px;
-}
+        .addsubtitles > form > label {
+            display: flex;
+            justify-content: center;
+            color: #1f74cc;
+            font-family: 'Montserrat', sans-serif;
+        }
 
-.footer {
-    position: fixed;
-    padding: 10px 10px 0px 10px;
-    bottom: 0;
-    width: 100%;
-    /* Height of the footer*/
-    height: 40px;
-    background: black;
-    color: white;
-    font-family: "Montserrat", sans-serif;
-    text-align: center;
-}
+        input {
+            height: 20%;
+            border-radius: 40px;
+            border: none;
+            display: flex;
+            justify-self: center;
+            margin: auto;
+            font-size: 100%;
+            padding-left: 2%;
+            margin-top: 1%;
+            margin-bottom: 1%;
+        }
 
-label[for="url"] {
-    color: #5D3FD3;
-    margin-top: 5px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
+       form {
+            width: 100%;
+            height: 40%;
+        }
 
-}
+        button {
+            margin: auto;
+            height: 20%;
+            width: auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #1f74cc;
+            border-radius: 20px;
+            font-size: 20px;
+            color: white;
+            border: none;
+            transition-duration: 0.4s;
+            margin-top: 1%;
+        }
 
-label[for="name"] {
-    color: #5D3FD3;
-    margin-top: 5px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
-}
+        button:hover {
+            height: 21%;
+            width: auto + 1%;
+            color:#1f74cc;
+            background-color: white;
+        }
 
-input[id="url"] {
-    height: 60px;
-    width: 250px;
-    background-color: white;
-    font-size: 20px;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    text-align: center;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
+        .footer {
+            width: 40%;
+            height: 3%;
+            background-color: black;
+            border-radius: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+            color: white;
+            font-family: 'Montserrat', sans-serif;
+        }
 
-input[id="name"] {
-    height: 60px;
-    width: 250px;
-    background-color: white;
-    font-size: 20px;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    text-align: center;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-
-
-button[id="add"] {
-    color: white;
-    height: 60px;
-    width: 250px;
-    background-color: #5D3FD3;
-    font-size: 20px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-
-button[id="add"]:hover {
-    color: #5D3FD3;
-    height: 60px;
-    width: 250px;
-    background-color: white;
-    font-size: 20px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-::-webkit-input-placeholder {
-    text-align: center;
-  }
-  
-  :-moz-placeholder {
-    text-align: center;
-  }
-  :-ms-input-placeholder {  
-    text-align: center; 
- }
-
-
+        a:link, a:visited, a:hover, a:active {
+            color: #1f74cc;
+            text-decoration: none;
+            background-color: transparent;
+            font-family: 'Montserrat', sans-serif;
+            margin: 0 auto;
+            text-align: center;
+        }
     </style>
-    <h1><%= cloudname %></h1>
-    <h2 class="subtitle"><%= lang["Add-Subtitles-For"] %> <%= req.params.file %></h2>
-    <% let link = `/addsubtitles/${req.user.username}/${req.params.file}` %>
-    <form action=<%= link %> method="post">
-        <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
-        <label for="name"><span class="material-icons">edit</span>&nbsp;<%= lang["Subtitles-Name"] %></label>
-        <input type="text" id="name" name="name" required></input>
-        <label for="url"><span class="material-icons">link</span>&nbsp;<%= lang["Subtitles-URL"] %></label>
-        <input type="text", id="url", name="url" required></input>
-        <p><%= lang["Works-Only-With"] %></p>
-        <div style="margin: 0 auto; text-align: center">
-        <a href="https://docs.daneeskripter.dev/daneecloud/subtitlesfromfile"><%= lang["Want-Subtitles"] %></a>
+    <div class="flex-container">
+        <div class="addsubtitles">
+            <h1><%= cloudname %></h1>
+            <h2 class="subtitle"><%= lang["Add-Subtitles-For"] %> <%= req.params.file %></h2>
+            <% let link = `/addsubtitles/${req.user.username}/${req.params.file}` %>
+            <form action=<%= link %> method="post">
+                <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
+                <label for="name"><i class="fa-solid fa-pen-to-square"></i>&nbsp;<%= lang["Subtitles-Name"] %></label>
+                <input type="text" id="name" name="name" required></input>
+                <label for="url"><i class="fa-solid fa-link"></i>&nbsp;<%= lang["Subtitles-URL"] %></label>
+                <input type="text", id="url", name="url" required></input>
+                <p><%= lang["Works-Only-With"] %></p>
+                <button type="submit" id="add"><i class="fa-solid fa-plus"></i>&nbsp;<%= lang["Add-Subtitles"] %></button>
+            </form>
+            <form action="https://docs.daneeskripter.dev/daneecloud/subtitlesfromfile">
+                <button type="submit"><%= lang["Want-Subtitles"] %></button>
+            </form>
         </div>
-        <button type="submit" id="add"><span class="material-icons">add</span>&nbsp;<%= lang["Add-Subtitles"] %></button>
-    </form>
-    <footer>
-        <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
-    
-    </footer>
+    </div>
+    <div class="footer">
+        <p><%= cloudname %> ©️ 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></p>
+    </div>
 </body>
 </html>
